Fix contrasting colors

--- a/_sass/plain.scss
+++ b/_sass/plain.scss
@@ -2,7 +2,7 @@
 @import "ext/normalize";
 @import "syntax";
 
-$linkColor: #0a59b0;
+$linkColor: #0a59b0 !default;
 $mobileW: 768px;
 $smallMobileW: 480px;
 $bigScreenW: 1600px;
@@ -97,7 +97,7 @@ main {
     .tagline {
       font-size: 22px;
       margin-top: 17px;
-      color: #aaa;
+      color: #767676;
       white-space: pre-wrap;
       line-height: normal;
     }
@@ -243,7 +243,7 @@ main {
 #posts-label {
   border-bottom: 1px solid #eee;
   font-size: 15px;
-  color: #777;
+  color: #767676;
   text-transform: uppercase;
   letter-spacing: 0.5px;
   padding-bottom: 10px;
